Fix member cards to be aligned correctly

--- a/app/assets/stylesheets/screen.css.styl
+++ b/app/assets/stylesheets/screen.css.styl
@@ -565,8 +565,10 @@ a.btn:active, input.btn:active
             margin -2px 0 0 0
             vertical-align top
             line-height 15px
-          p.term
+          p.term,
+          p.selected-as
             margin-top 6px
+            min-width 100px
           .status-buttons
             float right
             margin 8px 0 0 1px
